<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FindProfessorActivity">

    <TextView
        android:id="@+id/searchQuestionText"
        android:layout_width="284dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:text="@string/who_question"
        android:textAppearance="@android:style/TextAppearance.Material.Headline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:onClick="searchProfessor"
        android:text="@string/find_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/professorInputTextView" />

    <AutoCompleteTextView
        android:id="@+id/professorInputTextView"
        android:layout_width="221dp"
        android:layout_height="57dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:completionThreshold="1"
        android:hint="@string/professor_search_hint"
        android:textColorHint="@drawable/selector"
        app:layout_constraintEnd_toStartOf="@+id/searchButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchQuestionText" />

</android.support.constraint.ConstraintLayout>