<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    android:onClick="proceed"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/facultyImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/faculty_logo"
        android:maxHeight="842dp"
        android:maxWidth="595dp"
        android:scaleType="fitCenter"
        android:layout_gravity="top"
        app:srcCompat="@drawable/logo_mimuw_cmyk" />

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="32dp"
        android:text="@string/app_title"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        android:layout_gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/tapPrompt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facultyImage" />

    <TextView
        android:id="@+id/tapPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/tap_prompt"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />
</LinearLayout>